--- a/templates/register_influencer.html
+++ b/templates/register_influencer.html
@@ -53,52 +53,52 @@
                                     <div data-mdb-input-init class="form-outline mb-4">
                                         <select id="category" name="category" class="form-control" required>
                                             <option value="" disabled selected>Choose your Category</option>
-                                            <option value="beauty">Beauty</option>
-                                            <option value="fashion">Fashion</option>
-                                            <option value="fitness">Fitness</option>
-                                            <option value="health">Health</option>
-                                            <option value="travel">Travel</option>
-                                            <option value="food">Food</option>
-                                            <option value="lifestyle">Lifestyle</option>
-                                            <option value="gaming">Gaming</option>
-                                            <option value="technology">Technology</option>
-                                            <option value="photography">Photography</option>
-                                            <option value="music">Music</option>
-                                            <option value="parenting">Parenting</option>
-                                            <option value="finance">Finance</option>
-                                            <option value="education">Education</option>
-                                            <option value="sports">Sports</option>
-                                            <option value="art">Art</option>
-                                            <option value="home-decor">Home Decor</option>
-                                            <option value="pets">Pets</option>
-                                            <option value="automotive">Automotive</option>
-                                            <option value="books">Books</option>
-                                            <option value="diy">DIY</option>
-                                            <option value="environment">Environment</option>
-                                            <option value="entertainment">Entertainment</option>
-                                            <option value="business">Business</option>
-                                            <option value="spirituality">Spirituality</option>
-                                            <option value="dating">Dating</option>
-                                            <option value="career">Career</option>
-                                            <option value="event-planning">Event Planning</option>
-                                            <option value="gaming-cosplay">Gaming Cosplay</option>
-                                            <option value="luxury">Luxury</option>
-                                            <option value="outdoors">Outdoors</option>
-                                            <option value="wellness">Wellness</option>
-                                            <option value="mental-health">Mental Health</option>
-                                            <option value="non-profit">Non-Profit</option>
-                                            <option value="comedy">Comedy</option>
-                                            <option value="news">News</option>
-                                            <option value="personal-development">Personal Development</option>
-                                            <option value="relationship">Relationship</option>
-                                            <option value="social-justice">Social Justice</option>
-                                            <option value="sustainable-living">Sustainable Living</option>
-                                            <option value="tech-gadgets">Tech Gadgets</option>
-                                            <option value="videography">Videography</option>
-                                            <option value="yoga">Yoga</option>
-                                            <option value="crypto">Crypto</option>
-                                            <option value="investment">Investment</option>
-                                            <option value="real-estate">Real Estate</option>
+                                            <option value="Beauty">Beauty</option>
+                                            <option value="Fashion">Fashion</option>
+                                            <option value="Fitness">Fitness</option>
+                                            <option value="Health">Health</option>
+                                            <option value="Travel">Travel</option>
+                                            <option value="Food">Food</option>
+                                            <option value="Lifestyle">Lifestyle</option>
+                                            <option value="Gaming">Gaming</option>
+                                            <option value="Technology">Technology</option>
+                                            <option value="Photography">Photography</option>
+                                            <option value="Music">Music</option>
+                                            <option value="Parenting">Parenting</option>
+                                            <option value="Finance">Finance</option>
+                                            <option value="Education">Education</option>
+                                            <option value="Sports">Sports</option>
+                                            <option value="Art">Art</option>
+                                            <option value="Home-Decor">Home Decor</option>
+                                            <option value="Pets">Pets</option>
+                                            <option value="Automotive">Automotive</option>
+                                            <option value="Books">Books</option>
+                                            <option value="DIY">DIY</option>
+                                            <option value="Environment">Environment</option>
+                                            <option value="Entertainment">Entertainment</option>
+                                            <option value="Business">Business</option>
+                                            <option value="Spirituality">Spirituality</option>
+                                            <option value="Dating">Dating</option>
+                                            <option value="Career">Career</option>
+                                            <option value="Event-Planning">Event Planning</option>
+                                            <option value="Gaming-Cosplay">Gaming Cosplay</option>
+                                            <option value="Luxury">Luxury</option>
+                                            <option value="Outdoors">Outdoors</option>
+                                            <option value="Wellness">Wellness</option>
+                                            <option value="Mental-Health">Mental Health</option>
+                                            <option value="Non-Profit">Non-Profit</option>
+                                            <option value="Comedy">Comedy</option>
+                                            <option value="News">News</option>
+                                            <option value="Personal-Development">Personal Development</option>
+                                            <option value="Relationship">Relationship</option>
+                                            <option value="Social-Justice">Social Justice</option>
+                                            <option value="Sustainable-Living">Sustainable Living</option>
+                                            <option value="Tech-Gadgets">Tech Gadgets</option>
+                                            <option value="Videography">Videography</option>
+                                            <option value="Yoga">Yoga</option>
+                                            <option value="Crypto">Crypto</option>
+                                            <option value="Investment">Investment</option>
+                                            <option value="Real-Estate">Real Estate</option>
                                         </select>
                                         <label class="form-label" for="category">Category</label>
                                     </div>
