--- a/templates/register_sponsor.html
+++ b/templates/register_sponsor.html
@@ -52,49 +52,49 @@
                              <div data-mdb-input-init class="form-outline mb-4">
                                 <select id="Industry" name="industry" class="form-control" required>
                                     <option value="" disabled selected>Choose your Industry</option>
-                                    <option value="technology">Technology</option>
-                                    <option value="finance">Finance</option>
-                                    <option value="healthcare">Healthcare</option>
-                                    <option value="education">Education</option>
-                                    <option value="manufacturing">Manufacturing</option>
-                                    <option value="retail">Retail</option>
-                                    <option value="real-estate">Real Estate</option>
-                                    <option value="entertainment">Entertainment</option>
-                                    <option value="transportation">Transportation</option>
-                                    <option value="agriculture">Agriculture</option>
-                                    <option value="automotive">Automotive</option>
-                                    <option value="construction">Construction</option>
-                                    <option value="energy">Energy</option>
-                                    <option value="food-and-beverage">Food and Beverage</option>
-                                    <option value="hospitality">Hospitality</option>
-                                    <option value="insurance">Insurance</option>
-                                    <option value="media">Media</option>
-                                    <option value="pharmaceuticals">Pharmaceuticals</option>
-                                    <option value="professional-services">Professional Services</option>
-                                    <option value="public-sector">Public Sector</option>
-                                    <option value="telecommunications">Telecommunications</option>
-                                    <option value="utilities">Utilities</option>
-                                    <option value="logistics">Logistics</option>
-                                    <option value="mining">Mining</option>
-                                    <option value="non-profit">Non-Profit</option>
-                                    <option value="aerospace">Aerospace</option>
-                                    <option value="biotechnology">Biotechnology</option>
-                                    <option value="chemicals">Chemicals</option>
-                                    <option value="consulting">Consulting</option>
-                                    <option value="defense">Defense</option>
-                                    <option value="fashion">Fashion</option>
-                                    <option value="furniture">Furniture</option>
-                                    <option value="human-resources">Human Resources</option>
-                                    <option value="legal">Legal</option>
-                                    <option value="luxury-goods">Luxury Goods</option>
-                                    <option value="packaging">Packaging</option>
-                                    <option value="publishing">Publishing</option>
-                                    <option value="recreation">Recreation</option>
-                                    <option value="security">Security</option>
-                                    <option value="sports">Sports</option>
-                                    <option value="tourism">Tourism</option>
-                                    <option value="waste-management">Waste Management</option>
-                                    <option value="wholesale">Wholesale</option>
+                                    <option value="Technology">Technology</option>
+                                    <option value="Finance">Finance</option>
+                                    <option value="Healthcare">Healthcare</option>
+                                    <option value="Education">Education</option>
+                                    <option value="Manufacturing">Manufacturing</option>
+                                    <option value="Retail">Retail</option>
+                                    <option value="Real-Estate">Real Estate</option>
+                                    <option value="Entertainment">Entertainment</option>
+                                    <option value="Transportation">Transportation</option>
+                                    <option value="Agriculture">Agriculture</option>
+                                    <option value="Automotive">Automotive</option>
+                                    <option value="Construction">Construction</option>
+                                    <option value="Energy">Energy</option>
+                                    <option value="Food-and-Beverage">Food and Beverage</option>
+                                    <option value="Hospitality">Hospitality</option>
+                                    <option value="Insurance">Insurance</option>
+                                    <option value="Media">Media</option>
+                                    <option value="Pharmaceuticals">Pharmaceuticals</option>
+                                    <option value="Professional-Services">Professional Services</option>
+                                    <option value="Public-Sector">Public Sector</option>
+                                    <option value="Telecommunications">Telecommunications</option>
+                                    <option value="Utilities">Utilities</option>
+                                    <option value="Logistics">Logistics</option>
+                                    <option value="Mining">Mining</option>
+                                    <option value="Non-Profit">Non-Profit</option>
+                                    <option value="Aerospace">Aerospace</option>
+                                    <option value="Biotechnology">Biotechnology</option>
+                                    <option value="Chemicals">Chemicals</option>
+                                    <option value="Consulting">Consulting</option>
+                                    <option value="Defense">Defense</option>
+                                    <option value="Fashion">Fashion</option>
+                                    <option value="Furniture">Furniture</option>
+                                    <option value="Human-Resources">Human Resources</option>
+                                    <option value="Legal">Legal</option>
+                                    <option value="Luxury-Goods">Luxury Goods</option>
+                                    <option value="Packaging">Packaging</option>
+                                    <option value="Publishing">Publishing</option>
+                                    <option value="Recreation">Recreation</option>
+                                    <option value="Security">Security</option>
+                                    <option value="Sports">Sports</option>
+                                    <option value="Tourism">Tourism</option>
+                                    <option value="Waste-Management">Waste Management</option>
+                                    <option value="Wholesale">Wholesale</option>
                                 </select>
                                 <label class="form-label" for="Industry">Industry</label>
                             </div>
