--- a/templates/search.html
+++ b/templates/search.html
@@ -172,79 +172,127 @@
             </div>
         </nav>
 
-        {% if type == "Sponsor" %}
-            {% for influencer in results %}
-            <div class="card">
-                <div class="card-header">
-                    {{ influencer.name }}
-                </div>
-                <div class="card-body">
-                    <p class="card-text">{{ influencer.email }}</p>
-                    <p class="card-text">{{ influencer.category }}</p>
-                    <p class="card-text">{{ influencer.reach }}</p>
-                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#requestAd{{ influencer.id }}">
-                        Request
-                    </button>
-                    <!-- Send Ad Request Modal -->
-                    <div class="modal fade" id="requestAd{{ influencer.id }}" tabindex="-1" role="dialog" aria-labelledby="requestAd" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered" role="document">
-                            <div class="modal-content">
-                                <form method="POST" id="request_ad">
-                                    <div class="modal-header">
-                                        <h5 class="modal-title" id="requestAd">Send an Ad Request</h5>
-                                    </div>
-                                    <div class="modal-body">
-                                        <input type="hidden" name="form_id" value="ad_request">
-                                        <input type="hidden" name="id" value="{{ influencer.id }}">
-                                        <select class="form-select" name="campaign_id" id="Campaign" aria-label="Default select example">
-                                            {% for camp in campaign %}
-                                                <option value="{{ camp.id }}">{{ camp.name }}</option>
-                                            {% endfor %}
-                                        </select>
-                                        <label class="form-label" for="Campaign">Campaign</label>
-                                        <input type="text" name="message" id="Messages" class="form-control" required/>
-                                        <label class="form-label" for="Messages">Messages</label>
-                                        <input type="text" name="requirement" id="Requirements" class="form-control" required/>
-                                        <label class="form-label" for="Requirements">Requirements</label>
-                                        <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" required/>
-                                        <label class="form-label" for="Payment_Amount">Payment Amount</label>
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                                        <button type="submit" name="status" class="btn btn-primary">Request</button>
-                                    </div>
-                                </form>
+        <div class="Main Section">
+            {% if type == "Sponsor" %}
+                {% for influencer in results.items %}
+                <br>
+                <div class="card">
+                    <div class="card-header">
+                        {{ influencer.name }}
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text">{{ influencer.email }}</p>
+                        <p class="card-text">{{ influencer.category }}</p>
+                        <p class="card-text">{{ influencer.reach }}</p>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#requestAd{{ influencer.id }}">
+                            Request
+                        </button>
+                        <!-- Send Ad Request Modal -->
+                        <div class="modal fade" id="requestAd{{ influencer.id }}" tabindex="-1" role="dialog" aria-labelledby="requestAd" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <form method="POST" id="request_ad">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="requestAd">Send an Ad Request</h5>
+                                        </div>
+                                        <div class="modal-body">
+                                            <input type="hidden" name="form_id" value="ad_request">
+                                            <input type="hidden" name="id" value="{{ influencer.id }}">
+                                            <select class="form-select" name="campaign_id" id="Campaign" aria-label="Default select example">
+                                                {% for camp in campaign %}
+                                                    <option value="{{ camp.id }}">{{ camp.name }}</option>
+                                                {% endfor %}
+                                            </select>
+                                            <label class="form-label" for="Campaign">Campaign</label>
+                                            <input type="text" name="message" id="Messages" class="form-control" required/>
+                                            <label class="form-label" for="Messages">Messages</label>
+                                            <input type="text" name="requirement" id="Requirements" class="form-control" required/>
+                                            <label class="form-label" for="Requirements">Requirements</label>
+                                            <input type="number" name="payment_amount" id="Payment_Amount" class="form-control" required/>
+                                            <label class="form-label" for="Payment_Amount">Payment Amount</label>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            <button type="submit" name="status" class="btn btn-primary">Request</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            {% endfor %}
-        {% elif type == "Influencer" %}
-            {% for campaign in results %}
-            <br>
-            <a href="{{ url_for('campaign', id=campaign.id) }}", style="text-decoration:none;">
-                <div class="card">
-                    <div class="card-header">
-                        {{ campaign.name }}
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">{{ campaign.description }}</p>
-                        <p class="card-text">{{ campaign.goals }}</p>
-                        <p class="card-text">{{ campaign.niche }}</p>
-                        <p class="card-text">{{ campaign.budget }}</p>
-                        <p class="card-text">{{ campaign.start_date }}</p>
-                        <p class="card-text">{{ campaign.end_date }}</p>
-                        <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: {{ (campaign.budget - campaign.remaining)/campaign.budget }}%;" 
-                            aria-valuenow="{{ (campaign.budget - campaign.remaining)/campaign.budget }}" aria-valuemin="0" aria-valuemax="100">{{ (campaign.budget - campaign.remaining)/campaign.budget }}%</div>
+                {% endfor %}
+            {% elif type == "Influencer" %}
+                {% for campaign in results.items %}
+                <br>
+                <a href="{{ url_for('campaign', id=campaign.id) }}", style="text-decoration:none;">
+                    <div class="card">
+                        <div class="card-header">
+                            {{ campaign.name }}
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">{{ campaign.description }}</p>
+                            <p class="card-text">{{ campaign.goals }}</p>
+                            <p class="card-text">{{ campaign.niche }}</p>
+                            <p class="card-text">{{ campaign.budget }}</p>
+                            <p class="card-text">{{ campaign.start_date }}</p>
+                            <p class="card-text">{{ campaign.end_date }}</p>
+                            <div class="progress">
+                                <div class="progress-bar" role="progressbar" style="width: {{ (campaign.budget - campaign.remaining)/campaign.budget }}%;" 
+                                aria-valuenow="{{ (campaign.budget - campaign.remaining)/campaign.budget }}" aria-valuemin="0" aria-valuemax="100">{{ (campaign.budget - campaign.remaining)/campaign.budget }}%</div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </a>
-            {% endfor %}
-        {% endif %}
+                </a>
+                {% endfor %}
+            {% endif %}
+            <!-- Navigation section for pagination controls -->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <!-- Check if there is a previous page -->
+                    {% if results.has_prev %}
+                    <li class="page-item">
+                        <!-- If there is, create a link to the previous page -->
+                        <a class="page-link" href="/search?page={{ results.prev_num }}">Previous</a>
+                    </li>
+                    {% else %}
+                    <!-- If not, show a disabled 'Previous' button -->
+                    <li class="page-item disabled"><span class="page-link">Previous</span></li>
+                    {% endif %}
 
+                    <!-- Loop through each page number provided by pagination.iter_pages() -->
+                    {% for page_num in results.iter_pages() %}
+                    <!-- Check if the page number exists (not None) -->
+                    {% if page_num %}
+                    <!-- Check if the current page is not the active page -->
+                    {% if page_num != results.page %}
+                    <!-- Create a clickable link for the page number -->
+                    <li class="page-item"><a class="page-link" href="/search?page={{ page_num }}">{{ page_num }}</a></li>
+                    {% else %}
+                    <!-- Highlight the current page as active and not clickable -->
+                    <li class="page-item active" aria-current="page">
+                        <span class="page-link">{{ page_num }}</span>
+                    </li>
+                    {% endif %}
+                    {% else %}
+                    <!-- For gaps in the pagination links, show ellipsis -->
+                    <li class="page-item disabled"><span class="page-link">...</span></li>
+                    {% endif %}
+                    {% endfor %}
+
+                    <!-- Check if there is a next page -->
+                    {% if results.has_next %}
+                    <li class="page-item">
+                        <!-- If there is, create a link to the next page -->
+                        <a class="page-link" href="/search?page={{ results.next_num }}">Next</a>
+                    </li>
+                    {% else %}
+                    <!-- If not, show a disabled 'Next' button -->
+                    <li class="page-item disabled"><span class="page-link">Next</span></li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     </body>
 </html>
